--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,14 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Mono:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap');
-
+:root{
+  font-family: var(--font-ocra);
+}
 
 body {
 margin: 0;
 padding: 0;
 box-sizing: border-box;
-font-family: 'Red Hat Mono', monospace;
 }
 /* globals.css or your dedicated CSS file */
 
